CHANGE: removed beanname from resultreceiver and reworked equals, hashcode and parameters of action-class
git-svn-id: https://cvs.dai-labor.de/jiac/jiac-tng/trunk@18492 d8bac29e-b7f5-0310-9bdb-a06bcefdf3b8